fix categories
